# grid barbershop: fix footer; fix catalog gallery; shift pager under catalog

--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ h2 {
   text-decoration: none;
 
   background: #000000;
-  border-radius: 5px;
+  border-width: 0;
 }
 .clearfix:before,
 .clearfix:after {
@@ -178,12 +178,9 @@ h2 {
   float: right;
   width: 200px;
 }
-
 /* END index page*/
 
 /* START catalog page*/
-
-
 .breadcrumbs-navigation ul {
   margin: 0;
   padding: 0;
@@ -218,10 +215,6 @@ h2 {
   width: 200px;
 }
 
-
-
-
-
 .catalog {
   float: right;
   width: 700px;
@@ -230,8 +223,12 @@ h2 {
 }
 
 .catalog-item {
+  position: relative;
+
   display: inline-block;
   width: 220px;
+  height: 310px;
+  margin-bottom: 20px;
   padding-right: 5px;
   padding-left: 5px;
 
@@ -243,9 +240,22 @@ h2 {
   color: black;
 }
 
+.item-photo {
+  padding-bottom: 20px;
+}
 
 
 
+.product-title {
+  padding-bottom: 20px;
+}
+
+.item-content .buy-product {
+  position: absolute;
+  bottom: 0;
+
+  border: 0;
+}
 
 .pages ul {
   margin: 0;
@@ -265,15 +275,12 @@ h2 {
   text-transform: uppercase;
   text-decoration: none;
 }
-
 /* END catalog page*/
 
 /* START catalog-item page*/
 .product-images {
   width: 460px;
 }
-
-
 
 .thumb {
   float: left;
@@ -310,5 +317,4 @@ h2 {
 .product-package-content {
   margin-bottom: 20px;
 }
-
 /* END catalog-item page*/
